--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,46 @@
 {
-  "extends": "next/core-web-vitals"
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint/eslint-plugin"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommend",
+    "plugin:prettier/recommend"
+  ],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/quotes": [
+      "error",
+      "single",
+      {
+        "avoidEscape": true,
+        "allowTemplateLiterals": true
+      }
+    ],
+    "no-trailing-spaces": [2, { "skip Blank Lines": false }],
+    "no-multiple-empty-lines": ["error", { "max": 1, "max B OF": 1}],
+    "object-curly-spacing": ["error", "always"],
+    "comma-spacing": [2, {"before": false, "after": true}],
+    "arrow-spacing": ["error", { "before": true, "after": true }],
+    "space-infix-ops": ["error", { "int32 Hint": false }],
+    "space-after-keywords": "off",
+    "keyword-spacing": [2, {"before": true, "after": true}],
+    "react/jsx-indent": [2, 2, {"indent Logical Expressions": true}],
+    "arrow-body-style": ["error", "as-needed"],
+    "padded-blocks": ["error", "never"],
+    "semi": ["error", "never"],
+    "max-len": ["error", { "code": 120 }],
+    "indent": ["error", 2],
+    "react/self-closing-comp": ["error",{
+    "component": true,
+    "html": true,
+    }],
+    "react/jsx-tag-spacing": ["error", { "before Self closing": "always" }]
+  }
 }
