--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "effector": "^22.8.6",
+    "effector-next": "^1.3.3",
+    "effector-react": "^22.5.3",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.64.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
