--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "effector": "^22.8.6",
     "effector-next": "^1.3.3",
@@ -24,8 +25,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
